# cgql

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  benchmark.sh  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml  codeql-analysis.yml
cgql/: CMakeLists.txt  cgql.cpp  cgql.h  cgqlPch.h  main.cpp
cgql/base/: baseParser.cpp  baseParser.h  cgqlPch.h  dependencyManager.h  typeRegistry.cpp  typeRegistry.h
cgql/execute/: defaultResolver.h  execute.cpp  execute.h
cgql/logger/: logger.cpp  logger.h
cgql/net/: socket.cpp  socket.h
cgql/parser/: CMakeLists.txt
cgql/schema/: GraphQLDefinition.h  GraphQLScalar.h  GraphQLScalarTypes.h  GraphQLTypes.h  dependencyManager.h  directiveLocations.h  parser.cpp  parser.h  traits.h  typeDefinitions.hpp
cgql/schema/GraphQLObject/: GraphQLField.cpp  GraphQLField.h  GraphQLObject.cpp  GraphQLObject.h
cgql/type/: Document.cpp  Document.h  abstractType.h
cgql/type/parser/: docToSchema.cpp  docToSchema.h  documentToSchema.cpp  documentToSchema.h  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h  utils.h
cgql/utilities/: assert.h  cgqlDefs.h  utils.h
cgql/utils/: pch.h  pre_compiled_headers.h
include/cgql/: cgql.h  cgqlDefs.h  utils.h
include/cgql/error/: error.h  exceptions.h
include/cgql/execute/: defaultResolver.h  execute.h
include/cgql/lexer/: tokenizer.h
include/cgql/logger/: logger.h
include/cgql/parser/: baseParser.h  directiveLocations.h  parser.h  schemaParser.h  traits.h
include/cgql/query/: Document.h
include/cgql/schema/: GraphQLTypes.h  typeDefinitions.h  typeDefinitions.hpp  typeRegistry.h
src/: cgql.cpp
src/execute/: coerceArgumentValues.cpp  coerceArgumentValues.h  execute.cpp  selectionSetExecutor.cpp  selectionSetExecutor.h
src/lexer/: tokenizer.cpp
src/parser/: baseParser.cpp  parser.cpp  schemaParser.cpp
src/query/: Document.cpp
src/schema/: typeDefinitions.cpp  typeRegistry.cpp
tests/: CMakeLists.txt  advancedParsing.h  basicExecution.h  basicParsing.cpp  basicTest.h  ghschema.h  github-schema.graphql  main.cpp  test.cpp  test.gql
tests/utils/: timer.hpp
